настроила логирование и поправила описания в сваггере
