# internal/api/serializers/error.go
@@ -1,0 +1,6 @@
+package serializers
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+	Error   string `json:"error"`
+}
